--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -33,12 +33,20 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          - image: "amazonlinux"
+            tag: "1"
           - image: "centos"
             tag: "7"
           - image: "debian"
             tag: "latest"
+          - image: "debian"
+            tag: "bullseye"
           - image: "fedora"
             tag: "31"
+          - image: "fedora"
+            tag: "latest"
+          - image: "ubuntu"
+            tag: "latest"
           - image: "ubuntu"
             tag: "bionic"
     steps:
