--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,13 @@ env:
   global:
     namespace="robertdebock"
   matrix:
+    - image="amazonlinux" tag="1"
     - image="centos" tag="7"
     - image="debian" tag="latest"
+    - image="debian" tag="bullseye"
     - image="fedora" tag="31"
+    - image="fedora" tag="latest"
+    - image="ubuntu" tag="latest"
     - image="ubuntu" tag="bionic"
 
 cache:
