--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,17 +7,23 @@ galaxy_info:
   min_ansible_version: 2.8
 
   platforms:
+    - name: Amazon
+      versions:
+        - 2018.03
     - name: EL
       versions:
         - 7
     - name: Debian
       versions:
         - buster
+        - bullseye
     - name: Fedora
       versions:
         - 31
+        - 32
     - name: Ubuntu
       versions:
+        - focal
         - bionic
 
   galaxy_tags:
