--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,5 @@
 ---
-- robertdebock.apt_autostart
-- robertdebock.bootstrap
-- robertdebock.ca_certificates
+roles:
+  - name: robertdebock.apt_autostart
+  - name: robertdebock.bootstrap
+  - name: robertdebock.ca_certificates
