--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
   rpm_key:
     key: "{{ digitalocean_agent_gpgkey }}"
   when:
-    - ansible_pkg_mgr == "yum" or ansible_pkg_mgr == "dnf"
+    - ansible_pkg_mgr in [ "dnf", "yum" ]
 
 - name: import apt key
   apt_key:
