--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,5 @@ roles:
   - name: robertdebock.apt_autostart
   - name: robertdebock.bootstrap
   - name: robertdebock.ca_certificates
+collections:
+  - name: community.general
