--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,17 +10,13 @@ _digitalocean_agent_validate_certs:
 digitalocean_agent_validate_certs: "{{ _digitalocean_agent_validate_certs[ansible_os_family] | default(_digitalocean_agent_validate_certs['default']) }}"
 
 _digitalocean_agent_repository_src:
-  default: []
+  default: digitalocean-agent.repo
   apt: digitalocean-agent.list
-  dnf: digitalocean-agent.repo
-  yum: digitalocean-agent.repo
 
 digitalocean_agent_repository_src: "{{ _digitalocean_agent_repository_src[ansible_pkg_mgr] | default(_digitalocean_agent_repository_src['default']) }}"
 
 _digitalocean_agent_repository_dest:
-  default: []
+  default: /etc/yum.repos.d/digitalocean-agent.repo
   apt: /etc/apt/sources.list.d/digitalocean-agent.list
-  dnf: /etc/yum.repos.d/digitalocean-agent.repo
-  yum: /etc/yum.repos.d/digitalocean-agent.repo
 
 digitalocean_agent_repository_dest: "{{ _digitalocean_agent_repository_dest[ansible_pkg_mgr] | default(_digitalocean_agent_repository_dest['default']) }}"
